@@ -4,7 +4,7 @@ class ClassAsFactory<T> {
     T x;
     public ClassAsFactory(Class<T> kind) {
         try {
-            x = kind.newInstance();
+            x = kind.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
